Fix unexpected gaps between sections

--- a/source/wp-content/themes/wporg-gutenberg/style-mobile.css
+++ b/source/wp-content/themes/wporg-gutenberg/style-mobile.css
@@ -79,3 +79,7 @@ p > a {
 		padding-top: 92px;
 	}
 }
+
+.wp-site-blocks > * + * {
+	margin-block-start: unset;
+}
